# burgergeddon

./: README.md  burgergeddon.apk  index.html  pyproject.toml
.github/workflows/: deploy_pygame.yml
build_android_apk/: buildozer.spec
src/burgergeddon/: game.py  main.py
