[project]
name = "burgergeddon"
version = "2025.12.3"
description = "A small little game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.2",
    "mistletoe>=1.4.0",
    "pygame>=2.6.1",
    "pygbag>=0.9.2",
    "typer>=0.15.1",
]

[project.scripts]
burgergeddon = "burgergeddon:main.start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burgergeddon"]

[tool.ruff.format]
quote-style = "single"
